@@ -1,5 +1,7 @@
 2004-05-31  Bradley Bell  <btb@icculus.org>
 
+	* include/pstypes.h: fix accidental solaris breakage
+
 	* main/object.c: fix crash caused by death-cam code
 
 	* d2x-Info.plist, d2xgl-Info.plist, d2x.xcode/project.pbxproj:
